Exercises-part-2/exercise-2.02/project/manifests/client-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: sirpacoder/client:v0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
