Exercises-part-2/exercise-2.02/project/manifests/server-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - name: server
    port: 3001
    protocol: TCP
    targetPort: 3001
